Added libs and index.html for github pages

--- a/analysis/raisin_classification_analysis.qmd
+++ b/analysis/raisin_classification_analysis.qmd
@@ -18,7 +18,7 @@ format:
     toc-depth: 3
     number-sections: true
     output-dir: ../docs
-
+output-file: index.html
 bibliography: references.bib
 ---
 
