--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -68,3 +68,32 @@
   year={2019},
   doi={10.1186/s12937-019-0439-1}
 }
+
+@misc{python,
+  title        = {Python: A dynamic, open source programming language},
+  author       = {{Python Software Foundation}},
+  year         = {2023},
+  howpublished = {\url{https://www.python.org/}}
+}
+
+@article{scikit-learn,
+  title={Scikit-learn: Machine Learning in Python},
+  author={Pedregosa, Fabian and others},
+  journal={Journal of Machine Learning Research},
+  volume={12},
+  pages={2825--2830},
+  year={2011}
+}
+
+@article{pandas,
+  author = {Wes McKinney},
+  title = {Data Structures for Statistical Computing in Python},
+  year = {2010}
+}
+
+@article{numpy,
+  title={Array programming with NumPy},
+  author={Harris, Charles R. and others},
+  journal={Nature},
+  year={2020}
+}
